<resources>
    <string name="app_name">QuizWiz</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account? <font color="#3949AB"><b>Sign Up</b></font></string>
    <string name="forgot_password">I forgot my password</string>
    <string name="already_have_acc">Already have an account? <font color="#3949AB"><b>Sign In</b></font></string>
    <string name="sign_up">Sign Up</string>
    <string name="register_with_us">Register with us</string>
    <string name="forgot_password_title">Forget password</string>
    <string name="send_link">Send link</string>
    <string name="send_email">Send email</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="sign_out">Sign out</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question">Question</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="time">Time</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="_60">60</string>
    <string name="_0">0</string>
    <string name="sorry_time_is_up">Sorry, Time is up! Continue with next question</string>
</resources>