<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".home.QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/_60" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/correct_answer" />

        <TextView
            android:id="@+id/correct_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/_0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/wrong_answer" />

        <TextView
            android:id="@+id/wrong_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/_0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="center"
            tools:text="@string/question"
            android:textColor="@color/dark_brown"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_brown"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:gravity="center"
            android:padding="16dp"
            tools:text="@string/textview"
            android:textColor="@color/dark_brown"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_brown"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:gravity="center"
            android:padding="16dp"
            tools:text="@string/textview"
            android:textColor="@color/dark_brown"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_brown"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:gravity="center"
            android:padding="16dp"
            tools:text="@string/textview"
            android:textColor="@color/dark_brown"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/light_brown"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:gravity="center"
            android:padding="16dp"
            tools:text="@string/textview"
            android:textColor="@color/dark_brown"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@null" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/dark_brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>