<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ForgotPassword">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="170dp"
        android:background="@drawable/login_shape"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/forgot_password_title"
            android:textAlignment="center"
            android:textColor="@color/dark_brown"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_mail_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/dark_brown"
            app:hintTextColor="@color/dark_brown"
            app:startIconDrawable="@drawable/round_email_24"
            app:startIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgot_mail_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/dark_brown"
                android:textColorHint="@color/dark_brown"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forget_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/send_email"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>